--- a/wiki/JavaLibrary.wiki
+++ b/wiki/JavaLibrary.wiki
@@ -45,3 +45,38 @@ ORESerialiser serial = ORESerialiserFactory.getInstance("N3");
 ResourceMapDocument doc = serial.serialise(rem);
 String serialisation = doc.toString();
 }}}
+
+== Adding Arbitrary Triples ==
+
+Any triple can be added to any object in the model provided that the overall graph remains connected.  This is tested by whether either end of the triple (the subject uri or the object uri if it exists) is referenced elsewhere in the graph.
+
+You can create a triple directly onto an object, thus:
+
+{{{
+ResourceMap rem = ...;
+URI atomUpdated = new URI("http://whatever.atom.uri/terms/Updated");
+Date updated = new Date();
+rem.createTriple(atomUpdated, updated);
+}}}
+
+When you serialise, you should get a triple like:
+
+{{{
+URI-REM atom:updated
+"01-01-1970"^^http://www.w3.org/rdf-date-type-uri-whatever-that-is
+}}}
+
+You can also create a stand-alond triple and add it to an object, thus:
+
+{{{
+ResourceMap rem = ...;
+Predicate pred = new Predicate();
+pred.setURI(new URI("http://whatever.atom.uri/terms/Updated"));
+Triple triple = new Triple();
+triple.setSubjectURI("subject-uri");
+triple.setPredicate(pred);
+triple.setObjectURI("object-uri");
+rem.addTriple(triple);
+}}}
+
+if "subject-uri" and "object-uri" are not present anywhere else in the graph at the time the triple is added, then an OREException will be thrown warning you that the graph is not connected.
