Edited wiki page through web user interface.

--- a/wiki/PythonLibrary.wiki
+++ b/wiki/PythonLibrary.wiki
@@ -3,8 +3,10 @@
 
 Documentation for the Python library.
 
-Usage
+==Usage==
 -----
+
+Import everything
 {{{
     >>> from foresite import *
     >>> from rdflib import URIRef
